fix 1px gap in chrome

--- a/app/assets/stylesheets/apps.css.scss
+++ b/app/assets/stylesheets/apps.css.scss
@@ -62,5 +62,5 @@ $HLCOLOR: #3399FF;
   text-align: center;
   position: relative;
   left: 0px;
-  top: 40px;
+  top: 39px;
 }
